# local_music

./: .env.example  .gitignore  CURRENT_TASK.md  README.md  START_PROMPT.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260527_0001_create_users_table.py  20260528_0002_auth_master.py  20260529_0003_catalog.py  20260530_0004_search.py
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: health.py
backend/app/api/v1/: admin.py  auth.py  playlists.py  reference.py  router.py  search.py  tracks.py  ws.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  redis.py  rq_queue.py  security.py  storage.py  sync_db.py  sync_redis.py
backend/app/models/: __init__.py  audit_log.py  catalog.py  invite.py  refresh_token.py  search.py  user.py
backend/app/repositories/: catalog.py  search.py  user.py
backend/app/schemas/: auth.py  catalog.py  search.py
backend/app/services/: auth.py  catalog.py  metadata_enrichment.py  search.py  sourcing.py  ytdlp.py
backend/app/workers/: tasks.py
backend/tests/: conftest.py  conftest_auth.py  conftest_db.py  test_auth_master.py  test_catalog.py  test_health.py  test_models_registry.py  test_search.py  test_ytdlp.py  test_ytdlp_retries.py
docs/: 00-overview.md  01-requirements.md  02-architecture.md  03-tech-stack.md  04-database-schema.md  05-api-spec.md  06-music-sourcing.md  07-vibe-recommendations.md  08-shazam-integration.md  09-infrastructure.md  10-mobile-apps.md  11-security-legal.md  12-roadmap.md  13-development-guide.md  14-user-upload.md  15-master-account.md  README.md  (+2 more)
(+47 files in other folders)
