[project]
name = "local-music-backend"
version = "0.1.0"
description = "Local Music API backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.0",
    "argon2-cffi==23.1.0",
    "asyncpg==0.30.0",
    "email-validator==2.2.0",
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "pydantic-settings==2.7.0",
    "PyJWT==2.10.1",
    "redis==5.2.1",
    "sqlalchemy[asyncio]==2.0.36",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "mypy==1.14.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.4",
    "types-redis==4.6.0.20241004",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = []

[[tool.mypy.overrides]]
module = ["app.services.*"]
strict = true

[[tool.mypy.overrides]]
module = ["app.core.security"]
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "no_db: tests that do not require database migrations",
]
